tests/out/error/other/is_private.in.bt
import bait.test_pkgs.pubpriv

struct UsesPriv{
	ps pubpriv.PrivStruct
	pa pubpriv.PrivAlias
}

s := pubpriv.PrivStruct{}

e := pubpriv.PrivEnum.a
e2 := 0 as pubpriv.PrivEnum

c := pubpriv.PRIV_CONST

pubpriv.priv_fun()

s2 := pubpriv.PubStruct{}
s2.priv_method()


// TODO test Bait-interfaces, once they are implemented
